force-app/main/default/objects/Contract/fields/Confidentiality_termination_policy__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_termination_policy__c</fullName>
    <label>Confidentiality termination policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>