force-app/main/default/objects/Contract/fields/Conflict_minerals__c.field-meta.xml
<CustomField>
    <fullName>Conflict_minerals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conflict minerals</label>
    <type>Checkbox</type>
</CustomField>