force-app/main/default/objects/Contract/fields/Contact_info_to_receive_invoice__c.field-meta.xml
<CustomField>
    <fullName>Contact_info_to_receive_invoice__c</fullName>
    <label>Contact Info to Receive Invoice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>