force-app/main/default/objects/Contract/fields/Contract_Approved__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Approved?</label>
    <type>Checkbox</type>
</CustomField>