force-app/main/default/objects/Contract/fields/Contract_renewal_period__c.field-meta.xml
<CustomField>
    <fullName>Contract_renewal_period__c</fullName>
    <label>Contract renewal period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>