force-app/main/default/objects/Contract/fields/Contract_renews_for_periods_of__c.field-meta.xml
<CustomField>
    <fullName>Contract_renews_for_periods_of__c</fullName>
    <label>Contract renews for periods of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One year</fullName>
            </value>
            <value>
                <fullName>Two years</fullName>
            </value>
            <value>
                <fullName>Three years</fullName>
            </value>
            <value>
                <fullName>Five years</fullName>
            </value>
            <value>
                <fullName>Other_see_general_contract_details_other</fullName>
                <label>Other, see General Contract Details - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>