force-app/main/default/objects/Contract/fields/Contract_term__c.field-meta.xml
<CustomField>
    <fullName>Contract_term__c</fullName>
    <label>Contract term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>