force-app/main/default/objects/Contract/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <inlineHelpText>If this box is empty, please assume that the currency is USD</inlineHelpText>
    <label>Currency</label>
    <type>TextArea</type>
</CustomField>