force-app/main/default/objects/Contract/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, please see the “Licensed Material Details – Other</inlineHelpText>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>