force-app/main/default/objects/Contract/fields/Customized_documents__c.field-meta.xml
<CustomField>
    <fullName>Customized_documents__c</fullName>
    <label>Customized documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>