force-app/main/default/objects/Contract/fields/Data_Privacy_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Data_Privacy_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Privacy Agreement</label>
    <type>Checkbox</type>
</CustomField>