force-app/main/default/objects/Contract/fields/Definition_of_Confidential_Information__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Confidential_Information__c</fullName>
    <label>Definition of Confidential Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>