force-app/main/default/objects/Contract/fields/Disable_Conga_Logic__c.field-meta.xml
<CustomField>
    <fullName>Disable_Conga_Logic__c</fullName>
    <formula>IF(OR(ISBLANK(Account.BillingStreet),ISBLANK(Account.BillingCity),ISBLANK(Account.BillingState),ISBLANK(Account.BillingPostalCode)),&quot;1&quot;,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disable Conga Logic</label>
    <type>Text</type>
</CustomField>