force-app/main/default/objects/Contract/fields/Disable_Conga_Logic_License__c.field-meta.xml
<CustomField>
    <fullName>Disable_Conga_Logic_License__c</fullName>
    <formula>IF(OR(ISBLANK(Initial_License_Fee__c),ISBLANK(Licensee_Agent_Count__c)),&quot;1&quot;,&quot;0&quot;)</formula>
    <label>Disable Conga Logic License</label>
    <type>Text</type>
</CustomField>