force-app/main/default/objects/Contract/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <label>Discounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>