force-app/main/default/objects/Contract/fields/Does_Company_have_access_to_the_Portal__c.field-meta.xml
<CustomField>
    <fullName>Does_Company_have_access_to_the_Portal__c</fullName>
    <label>Does Company have access to the Portal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standards</fullName>
            </value>
            <value>
                <fullName>Yes, see Portal Access Details</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>