force-app/main/default/objects/Contract/fields/DPR_CM_Workshop_for_Project_Managers__c.field-meta.xml
<CustomField>
    <fullName>DPR_CM_Workshop_for_Project_Managers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPR: CM Workshop for Project Managers</label>
    <type>Checkbox</type>
</CustomField>