force-app/main/default/objects/Contract/fields/Drug_Test__c.field-meta.xml
<CustomField>
    <fullName>Drug_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, see Legal.</inlineHelpText>
    <label>Drug Test</label>
    <type>Checkbox</type>
</CustomField>