force-app/main/default/objects/Contract/fields/Effective_date__c.field-meta.xml
<CustomField>
    <fullName>Effective_date__c</fullName>
    <label>PSA Effective date</label>
    <type>Date</type>
</CustomField>