force-app/main/default/objects/Contract/fields/Employees_Survival_Guide_to_Change_book__c.field-meta.xml
<CustomField>
    <fullName>Employees_Survival_Guide_to_Change_book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employees Survival Guide to Change book</label>
    <type>Checkbox</type>
</CustomField>