force-app/main/default/objects/Contract/fields/Exchange_Rate_Details__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_Details__c</fullName>
    <label>Exchange Rate Details</label>
    <type>TextArea</type>
</CustomField>