force-app/main/default/objects/Contract/fields/Facilitator_Guides_role_based_pr__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Guides_role_based_pr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facilitator Guides-Role Based Programs</label>
    <type>Checkbox</type>
</CustomField>