force-app/main/default/objects/Contract/fields/Finance_Details_Other__c.field-meta.xml
<CustomField>
    <fullName>Finance_Details_Other__c</fullName>
    <label>Finance Details - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>