force-app/main/default/objects/Contract/fields/Fixed_term__c.field-meta.xml
<CustomField>
    <fullName>Fixed_term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed term</label>
    <type>Checkbox</type>
</CustomField>