force-app/main/default/objects/Contract/fields/Fundamentals_of_Change_Management__c.field-meta.xml
<CustomField>
    <fullName>Fundamentals_of_Change_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundamentals of Change Management</label>
    <type>Checkbox</type>
</CustomField>