force-app/main/default/objects/Contract/fields/General__c.field-meta.xml
<CustomField>
    <fullName>General__c</fullName>
    <label>General Contract Details - Other</label>
    <type>TextArea</type>
</CustomField>