force-app/main/default/objects/Contract/fields/General_Contract_Details_Other__c.field-meta.xml
<CustomField>
    <fullName>General_Contract_Details_Other__c</fullName>
    <label>General Contract Details - Other</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>