force-app/main/default/objects/Contract/fields/How_long_must_Prosci_protect_CI__c.field-meta.xml
<CustomField>
    <fullName>How_long_must_Prosci_protect_CI__c</fullName>
    <label>How long must Prosci protect CI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>10 years from termination</fullName>
            </value>
            <value>
                <fullName>5 years from termination</fullName>
            </value>
            <value>
                <fullName>3 years from termination</fullName>
            </value>
            <value>
                <fullName>2 years from termination</fullName>
            </value>
            <value>
                <fullName>Ends at termination</fullName>
            </value>
            <value>
                <fullName>Other, see How long must Prosci protect CI-Other</fullName>
                <label>Other - see How long must Prosci protect CI - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>