force-app/main/default/objects/Contract/fields/How_long_must_Prosci_protect_CI_other__c.field-meta.xml
<CustomField>
    <fullName>How_long_must_Prosci_protect_CI_other__c</fullName>
    <label>How long must Prosci protect CI-Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>