force-app/main/default/objects/Contract/fields/How_to_end_CI_requirements__c.field-meta.xml
<CustomField>
    <fullName>How_to_end_CI_requirements__c</fullName>
    <label>How to end CI requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>