force-app/main/default/objects/Contract/fields/Indemnification_Score__c.field-meta.xml
<CustomField>
    <fullName>Indemnification_Score__c</fullName>
    <label>Indemnification Score</label>
    <length>15</length>
    <type>Text</type>
</CustomField>