force-app/main/default/objects/Contract/fields/Indemnified_claims__c.field-meta.xml
<CustomField>
    <fullName>Indemnified_claims__c</fullName>
    <label>Indemnified claims</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>