force-app/main/default/objects/Contract/fields/Indemnified_damages__c.field-meta.xml
<CustomField>
    <fullName>Indemnified_damages__c</fullName>
    <label>Indemnified damages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>