force-app/main/default/objects/Contract/fields/Indemnified_parties__c.field-meta.xml
<CustomField>
    <fullName>Indemnified_parties__c</fullName>
    <label>Indemnified parties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>