force-app/main/default/objects/Contract/fields/Initial_License_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_License_Fee__c</fullName>
    <label>Initial License Fee</label>
    <type>TextArea</type>
</CustomField>