force-app/main/default/objects/Contract/fields/Insurance_additional_insured__c.field-meta.xml
<CustomField>
    <fullName>Insurance_additional_insured__c</fullName>
    <label>Insurance additional insured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>