force-app/main/default/objects/Contract/fields/Insurance_Limits__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Limits__c</fullName>
    <label>Insurance Limits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>