force-app/main/default/objects/Contract/fields/Insurance_Requirements_Other__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Requirements_Other__c</fullName>
    <label>Insurance Requirements - Other</label>
    <type>TextArea</type>
</CustomField>