force-app/main/default/objects/Contract/fields/International_I_P_Indemnification__c.field-meta.xml
<CustomField>
    <fullName>International_I_P_Indemnification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International I.P. Indemnification</label>
    <type>Checkbox</type>
</CustomField>