force-app/main/default/objects/Contract/fields/Intro_to_Change_Management_elearning__c.field-meta.xml
<CustomField>
    <fullName>Intro_to_Change_Management_elearning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intro to Change Management eLearning</label>
    <type>Checkbox</type>
</CustomField>