force-app/main/default/objects/Contract/fields/Introduction_to_Leading_Change_eLearning__c.field-meta.xml
<CustomField>
    <fullName>Introduction_to_Leading_Change_eLearning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Introduction to Leading Change eLearning</label>
    <type>Checkbox</type>
</CustomField>