force-app/main/default/objects/Contract/fields/Invoice_Req_mts_for_International_Licens__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Req_mts_for_International_Licens__c</fullName>
    <inlineHelpText>These are the invoicing requirements that apply to Licensees who are located outside of the U.S</inlineHelpText>
    <label>Invoice Req&apos;mts for International Lic.</label>
    <type>TextArea</type>
</CustomField>