force-app/main/default/objects/Contract/fields/invoice_requirements__c.field-meta.xml
<CustomField>
    <fullName>invoice_requirements__c</fullName>
    <label>Invoice Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Order Number</fullName>
            </value>
            <value>
                <fullName>Applicable Contract Number</fullName>
            </value>
            <value>
                <fullName>Other, see Additional Invoice Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>