force-app/main/default/objects/Contract/fields/IP_Copyright_terms__c.field-meta.xml
<CustomField>
    <fullName>IP_Copyright_terms__c</fullName>
    <label>IP Copyright terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>