force-app/main/default/objects/Contract/fields/IP_Score__c.field-meta.xml
<CustomField>
    <fullName>IP_Score__c</fullName>
    <label>IP Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>