force-app/main/default/objects/Contract/fields/Legal_Details__c.field-meta.xml
<CustomField>
    <fullName>Legal_Details__c</fullName>
    <label>Legal Details - Other</label>
    <type>TextArea</type>
</CustomField>