force-app/main/default/objects/Contract/fields/Liability_Carve_out_caps__c.field-meta.xml
<CustomField>
    <fullName>Liability_Carve_out_caps__c</fullName>
    <label>Liability Carve-out caps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>