force-app/main/default/objects/Contract/fields/Liability_Carve_outs__c.field-meta.xml
<CustomField>
    <fullName>Liability_Carve_outs__c</fullName>
    <label>Liability Carve-outs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>