force-app/main/default/objects/Contract/fields/Liability_Initial_cap__c.field-meta.xml
<CustomField>
    <fullName>Liability_Initial_cap__c</fullName>
    <label>Liability Initial cap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>