force-app/main/default/objects/Contract/fields/License_Choice_of_Law__c.field-meta.xml
<CustomField>
    <fullName>License_Choice_of_Law__c</fullName>
    <label>License Choice of Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Other, see Legal Details - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>