force-app/main/default/objects/Contract/fields/License_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>License_Contract_Term__c</fullName>
    <inlineHelpText>This applies to the term of the license agreement itself, not the Active Licensee Status. Please see &quot;Active Licensee Details&quot; for the term that applies to the Active Licensee Status.</inlineHelpText>
    <label>License Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>One year</fullName>
            </value>
            <value>
                <fullName>Two year</fullName>
            </value>
            <value>
                <fullName>Three year</fullName>
            </value>
            <value>
                <fullName>Five year</fullName>
            </value>
            <value>
                <fullName>Other, see General Contract Details - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>