force-app/main/default/objects/Contract/fields/License_customized_documents__c.field-meta.xml
<CustomField>
    <fullName>License_customized_documents__c</fullName>
    <label>License customized documents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>