force-app/main/default/objects/Contract/fields/License_Details_Other__c.field-meta.xml
<CustomField>
    <fullName>License_Details_Other__c</fullName>
    <label>License Details – Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>