force-app/main/default/objects/Contract/fields/License_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Effective_Date__c</fullName>
    <label>License Effective Date</label>
    <type>Date</type>
</CustomField>