force-app/main/default/objects/Contract/fields/License_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Termination_Date__c</fullName>
    <label>License Termination Date</label>
    <type>Date</type>
</CustomField>