force-app/main/default/objects/Contract/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <inlineHelpText>If &quot;Other&quot; is selected, please see General Contract Details for additional information.</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADKAR Enablement</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Complete - with DPR</fullName>
            </value>
            <value>
                <fullName>Complete - with Portal</fullName>
            </value>
            <value>
                <fullName>ECM-Enterprise Change Management</fullName>
            </value>
            <value>
                <fullName>eLearning</fullName>
            </value>
            <value>
                <fullName>eToolkit</fullName>
            </value>
            <value>
                <fullName>Full Portal access</fullName>
            </value>
            <value>
                <fullName>Managers</fullName>
            </value>
            <value>
                <fullName>OCC-Organizational Change Competency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>