force-app/main/default/objects/Contract/fields/licensed_material_details_other__c.field-meta.xml
<CustomField>
    <fullName>licensed_material_details_other__c</fullName>
    <label>Licensed Material Details – Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>