force-app/main/default/objects/Contract/fields/Licensed_Materials__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Materials__c</fullName>
    <label>Licensed Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DPR</fullName>
            </value>
            <value>
                <fullName>ADKAR book</fullName>
            </value>
            <value>
                <fullName>Change Mgt: people side of change book</fullName>
            </value>
            <value>
                <fullName>Employees Survival Guide to Change book</fullName>
            </value>
            <value>
                <fullName>CM Cert Pgm, a pictorial book</fullName>
            </value>
            <value>
                <fullName>Best Practices in CM report</fullName>
            </value>
            <value>
                <fullName>Change Management Toolkit</fullName>
            </value>
            <value>
                <fullName>CM Guide for Mgrs &amp; Supervisors Toolkit</fullName>
            </value>
            <value>
                <fullName>CM Practitioner Course</fullName>
            </value>
            <value>
                <fullName>CM Coaching Course</fullName>
            </value>
            <value>
                <fullName>CM Sponsor Course</fullName>
            </value>
            <value>
                <fullName>CM Orientation Employees Course</fullName>
            </value>
            <value>
                <fullName>DPR: CM Workshop for Project Managers</fullName>
            </value>
            <value>
                <fullName>Change Management Pilot Professional</fullName>
            </value>
            <value>
                <fullName>Practitioner eToolkit</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Change Management</fullName>
            </value>
            <value>
                <fullName>Facilitator Guides for all role based programs</fullName>
            </value>
            <value>
                <fullName>ADKAR audiobook</fullName>
            </value>
            <value>
                <fullName>Change Portfolio Toolkit</fullName>
            </value>
            <value>
                <fullName>ADKAR eLearning</fullName>
            </value>
            <value>
                <fullName>Introduction_to_Leading_Change_eLeanring</fullName>
                <label>Introduction to Leading Change eLearning</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Thriving Through Change eLearning</fullName>
            </value>
            <value>
                <fullName>CM Research Library</fullName>
            </value>
            <value>
                <fullName>Prosci Introduction to Change Management eLearning module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>