force-app/main/default/objects/Contract/fields/Licensed_materials_version__c.field-meta.xml
<CustomField>
    <fullName>Licensed_materials_version__c</fullName>
    <label>Licensed materials version</label>
    <length>25</length>
    <type>Text</type>
</CustomField>