force-app/main/default/objects/Contract/fields/Licensee_Agent_Count__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Agent_Count__c</fullName>
    <label>Licensee Agent Count</label>
    <length>20</length>
    <type>Text</type>
</CustomField>