force-app/main/default/objects/Contract/fields/Licensee_Agent_count_increase__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Agent_count_increase__c</fullName>
    <label>Licensee Agent Count increase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>