force-app/main/default/objects/Contract/fields/Limitations_on_Liability_Score__c.field-meta.xml
<CustomField>
    <fullName>Limitations_on_Liability_Score__c</fullName>
    <label>Limitations on Liability Score</label>
    <length>15</length>
    <type>Text</type>
</CustomField>