force-app/main/default/objects/Contract/fields/Limited_set_of_Portal_tools_details__c.field-meta.xml
<CustomField>
    <fullName>Limited_set_of_Portal_tools_details__c</fullName>
    <label>Limited set of Portal tools details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>