force-app/main/default/objects/Contract/fields/List_of_Approved_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>List_of_Approved_Affiliates__c</fullName>
    <label>List of Approved Affiliates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>