force-app/main/default/objects/Contract/fields/Lodging_requirements__c.field-meta.xml
<CustomField>
    <fullName>Lodging_requirements__c</fullName>
    <label>Lodging Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>