force-app/main/default/objects/Contract/fields/Materials_Discount__c.field-meta.xml
<CustomField>
    <fullName>Materials_Discount__c</fullName>
    <inlineHelpText>If &apos;Yes, if updated to current version&apos;, please look under Licensed Materials Version to confirm that it reflects the current year.</inlineHelpText>
    <label>Materials Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, if updated to current version</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>