force-app/main/default/objects/Contract/fields/may_affiliates_make_use_of_license__c.field-meta.xml
<CustomField>
    <fullName>may_affiliates_make_use_of_license__c</fullName>
    <label>May Affiliates make use of License?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Licensee</fullName>
            </value>
            <value>
                <fullName>Affiliates</fullName>
            </value>
            <value>
                <fullName>Yes, see List of Approved Affiliates</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>