force-app/main/default/objects/Contract/fields/Method_to_provide_notice__c.field-meta.xml
<CustomField>
    <fullName>Method_to_provide_notice__c</fullName>
    <label>Method to provide notice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electronic mail</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Other, see Legal Details - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>